fix async fix big.bang conflict error on start use a base image to speed up build

--- a/docker-dev.cfg
+++ b/docker-dev.cfg
@@ -18,16 +18,15 @@ zope-conf-additional =
   ${zope-conf:zamqp}
 eggs +=
     imio.prometheus
-    collective.big.bang
 
 zcml +=
     imio.prometheus
-    collective.big.bang
 
 [instance-async]
 debug-mode = off
-environment-vars =
-    ZC_ASYNC_UUID /data/async-uuid.txt
+; uncomment when the bug with regenerating a new uuid at every start is fixed
+;environment-vars =
+;    ZC_ASYNC_UUID /data/async-uuid.txt
 
 [instance]
 <= instance1
@@ -45,3 +44,7 @@ zope-conf-additional =
       password ${port:admin-password}
   </clock-server>
   ${zope-conf:zamqp}
+eggs +=
+    collective.big.bang
+zcml +=
+    collective.big.bang
