--- a/.github/workflows/docker-hub-publish-base.yml
+++ b/.github/workflows/docker-hub-publish-base.yml
@@ -1,7 +1,7 @@
 name: Update images
 on:
-  push:
-    branches: [ master ]
+  schedule:
+    - cron: '0 2 * * *' # Daily at 02:00
 jobs:
   docker:
     runs-on: ubuntu-latest
@@ -22,17 +22,7 @@ jobs:
         with:
           context: .
           file: ./docker/Dockerfile-ubuntu-20.04
-          tags: imiobe/iadelib:latest
-          pull: true
-          push: true
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-      - name: Build dev image
-        uses: docker/build-push-action@v2.5.0
-        with:
-          context: .
-          file: ./docker/Dockerfile-dev
-          tags: imiobe/iadelib:dev
+          tags: imiobe/iadelib:base
           pull: true
           push: true
           cache-from: type=gha
