--- a/docker/Dockerfile-base
+++ b/docker/Dockerfile-base
@@ -1,11 +1,12 @@
-FROM imiobe/iadelib:base as builder
+FROM imiobe/plone-base:4.3.20-ubuntu as builder
 
 ARG PROFILE="communes.cfg"
 
 WORKDIR /plone
 USER root
+COPY --chown=imio docker/zint-2.10.0-src.tar.gz /home/imio/
 COPY --chown=imio *.cfg *.conf requirements.txt Makefile /plone/
-RUN apt-get update \
+RUN add-apt-repository -yu ppa:libreoffice/libreoffice-still \
   && apt-get full-upgrade -qqy \
   && apt-get install -qqy --no-install-recommends \
      python-is-python2 \
@@ -60,6 +61,13 @@ RUN apt-get update \
   && rm -rf /var/lib/apt/lists/* \
   && pip install "virtualenv>=20.7.2" \
   && gem install docsplit \
+  && tar -x -C /home/imio -f /home/imio/zint-2.10.0-src.tar.gz \
+  && rm /home/imio/zint-2.10.0-src.tar.gz \
+  && cd /home/imio/zint-* \
+  && cmake --log-level=ERROR . \
+  && make --quiet \
+  && make --quiet install \
+  && cd /plone \
   && sed -i "s/\${buildout:directory}\/var/\/data/g" *.cfg \
   && echo "[buildout]" > buildout.cfg \
   && echo "extends =" >> buildout.cfg \
@@ -72,7 +80,7 @@ RUN apt-get update \
   && su -c "bin/buildout -t 30 -N" -s /bin/sh imio \
   && rm -rf develop-eggs/ src/ var/blobstorage/ var/filestorage/ parts/instance? bin/instance?
 
-FROM imiobe/iadelib:base
+FROM imiobe/plone-base:4.3.20-ubuntu
 ENV DELIB_MAJOR=4.2
 
 LABEL delib=$DELIB_VERSION \
@@ -81,13 +89,16 @@ LABEL delib=$DELIB_VERSION \
       maintainer="iMio"
 
 COPY --from=builder /usr/local/lib/python2.7/dist-packages /usr/local/lib/python2.7/dist-packages
+COPY --from=builder /usr/local/lib/libzint.so* /usr/local/lib/
+COPY --from=builder /usr/local/include/zint.h /usr/local/include/
+COPY --from=builder /usr/local/bin/zint /usr/local/bin/
 
 COPY --chown=imio --from=builder /plone /plone/
 COPY --chown=imio docker/docker-initialize.py docker/docker-entrypoint.sh docker/update-admin-password.py /plone/
 
 WORKDIR /plone
 USER root
-RUN apt-get update \
+RUN add-apt-repository -yu ppa:libreoffice/libreoffice-still \
   && apt-get full-upgrade -qqy \
   && apt-get install -qqy --no-install-recommends \
      python-is-python2 \
