keep ZC_ASYNC_UUID

--- a/docker-dev.cfg
+++ b/docker-dev.cfg
@@ -24,9 +24,8 @@ zcml +=
 
 [instance-async]
 debug-mode = off
-; uncomment when the bug with regenerating a new uuid at every start is fixed
-;environment-vars =
-;    ZC_ASYNC_UUID /data/async-uuid.txt
+environment-vars =
+    ZC_ASYNC_UUID /data/async-uuid.txt
 
 [instance]
 <= instance1
