added pack script

--- a/docker-dev.cfg
+++ b/docker-dev.cfg
@@ -6,6 +6,7 @@ parts +=
 [zeoserver]
 file-storage = /data/filestorage/Data.fs
 blob-storage = /data/blobstorage
+zeo-address = zeo:8100
 
 [instance1]
 blob-storage = /data/blobstorage
