--- a/docker/Dockerfile-base
+++ b/docker/Dockerfile-base
@@ -94,7 +94,7 @@ COPY --from=builder /usr/local/include/zint.h /usr/local/include/
 COPY --from=builder /usr/local/bin/zint /usr/local/bin/
 
 COPY --chown=imio --from=builder /plone /plone/
-COPY --chown=imio docker/docker-initialize.py docker/docker-entrypoint.sh docker/update-admin-password.py /plone/
+COPY --chown=imio docker/docker-initialize.py docker/docker-entrypoint.sh docker/pack_zeo.sh docker/update-admin-password.py /plone/
 
 WORKDIR /plone
 USER root
@@ -128,7 +128,7 @@ RUN add-apt-repository -yu ppa:libreoffice/libreoffice-still \
   && rm -rf /var/lib/apt/lists/* \
   && gem install docsplit \
   && su -c "bin/pip install 'python-ldap==2.4.15' -r requirements.txt" -s /bin/sh imio \
-  && chmod +x /plone/docker-entrypoint.sh
+  && chmod +x /plone/*.sh
 
 USER imio
 
@@ -142,4 +142,4 @@ ENV ZEO_ADDRESS=zeo:8100 \
 
 EXPOSE 8081
 ENTRYPOINT ["/plone/docker-entrypoint.sh"]
-CMD ["start"]
+CMD ["instance"]
