--- a/docker/Dockerfile-ubuntu-20.04
+++ b/docker/Dockerfile-ubuntu-20.04
@@ -86,39 +86,6 @@ COPY --chown=imio --from=builder /plone /plone/
 COPY --chown=imio docker/docker-initialize.py docker/docker-entrypoint.sh docker/update-admin-password.py /plone/
 
 WORKDIR /plone
-USER root
-RUN apt-get update \
-  && apt-get full-upgrade -qqy \
-  && apt-get install -qqy --no-install-recommends \
-     python-is-python2 \
-     openjdk-16-jre-headless \
-     libreoffice \
-     libreoffice-script-provider-python \
-     file \
-     imagemagick \
-     graphicsmagick \
-     ghostscript \
-     poppler-data \
-     poppler-utils \
-     ruby \
-     libmagic1 \
-     libjpeg62 \
-     libpng16-16 \
-     libopenjp2-7 \
-     libldap-2.4-2 \
-     ldap-utils \
-     libwebp6 \
-     libgif7 \
-     libpq5 \
-     lbzip2 \
-     librsvg2-bin \
-     libsigc++-2.0-0v5 \
-  && apt-get purge libreoffice-gnome libreoffice-gtk* libreoffice-help* libreoffice-kde* \
-  && rm -rf /var/lib/apt/lists/* \
-  && gem install docsplit \
-  && su -c "bin/pip install 'python-ldap==2.4.15' -r requirements.txt" -s /bin/sh imio \
-  && chmod +x /plone/docker-entrypoint.sh
-
 USER imio
 
 ENV ZEO_ADDRESS=zeo:8100 \
@@ -131,4 +98,4 @@ ENV ZEO_ADDRESS=zeo:8100 \
 
 EXPOSE 8081
 ENTRYPOINT ["/plone/docker-entrypoint.sh"]
-CMD ["start"]
+CMD ["instance"]
