Use cssselect = 1.1.0 necessary for imio.helpers[lxml]

--- a/versions.cfg
+++ b/versions.cfg
@@ -45,6 +45,7 @@ collective.usernamelogger = 1.4
 collective.z3cform.datagridfield = 1.3.3
 collective.z3cform.select2 = 2.0.1
 communesplone.layout = 4.3.15.1
+cssselect = 1.1.0
 dexterity.localrolesfield = 1.2
 dexterity.localroles = 1.4
 ecreall.helpers.upgrade = 1.4
