--- a/versions.cfg
+++ b/versions.cfg
@@ -13,7 +13,7 @@ collective.prometheus = 1.6.0
 Products.DocFinderTab = 1.0.5
 mr.developer = 2.0.0
 
-Products.PloneMeeting = 4.2b14
+Products.PloneMeeting = 4.2b15
 
 # profile specific versions
 Products.MeetingCommunes = 4.2b11
@@ -53,10 +53,10 @@ ftw.labels = 2.0.1
 imio.annex = 2.9
 imio.actionspanel = 1.56
 imio.dashboard = 2.8
-imio.helpers = 0.45
+imio.helpers = 0.46
 imio.migrator = 1.29
 imio.history = 1.22
-imio.pm.locales = 4.2b10
+imio.pm.locales = 4.2b11
 imio.prettylink = 1.17
 imio.pyutils = 0.15
 plone.app.versioningbehavior = 1.3.1
@@ -64,7 +64,7 @@ plone.formwidget.masterselect = 1.6
 # plone.formwidget.namedfile = 2.0.6 has a display bug when editing existing file
 plone.formwidget.namedfile = 2.0.5
 plonetheme.imioapps = 2.26
-Products.CPUtils = 1.18
+Products.CPUtils = 1.19
 Products.PasswordStrength = 0.4
 python-dateutil = 2.7.3
 simplejson = 3.13.2
@@ -249,7 +249,7 @@ configparser = 3.8.1
 
 # plonemeeting.restapi
 imio.restapi = 1.0a14
-plonemeeting.restapi = 1.0b2
+plonemeeting.restapi = 1.0rc2
 
 plone.restapi = 7.3.7
 PyJWT = 1.7.1
