Replace make standard-config by collective.big.bang

--- a/base.cfg
+++ b/base.cfg
@@ -131,6 +131,7 @@ eggs =
     Products.ZNagios
     zc.z3monitor
     imio.prometheus
+    collective.big.bang
 
 zcml =
     Products.PloneMeeting-overrides
@@ -139,6 +140,7 @@ zcml =
     zc.z3monitor
     collective.monitor
     imio.prometheus
+    collective.big.bang
 
 [instance-async]
 <= instance1
@@ -146,7 +148,6 @@ http-address = ${port:instance-async-http}
 zserver-threads = 4
 debug-mode = on
 verbose-security = on
-zope-conf-additional =
 zcml-additional =
     <include package="plone.app.async" file="multi_db_worker.zcml" />
 environment-vars =
