--- a/dev.cfg
+++ b/dev.cfg
@@ -47,6 +47,7 @@ auto-checkout =
     collective.js.iframeresizer
     collective.js.tooltipster
     collective.querynextprev
+    collective.big.bang
 #    collective.fingerpointing
 #    collective.upgrade
 #    communesplone.layout
