--- a/prod.cfg
+++ b/prod.cfg
@@ -20,9 +20,11 @@ zope-conf-additional =
   </product-config>
   ${zope-conf:additional}
   ${zope-conf:zamqp}
+environment-vars -=
+    ACTIVE_BIGBANG True
 
 [instance3]
-<= instance1
+<= instance2
 http-address = ${port:instance3-http}
 zope-conf-additional =
   <product-config five.z2monitor>
@@ -32,7 +34,7 @@ zope-conf-additional =
   ${zope-conf:zamqp}
 
 [instance4]
-<= instance1
+<= instance2
 http-address = ${port:instance4-http}
 zope-conf-additional =
   <product-config five.z2monitor>
@@ -42,7 +44,7 @@ zope-conf-additional =
   ${zope-conf:zamqp}
 
 [instance-debug]
-<= instance1
+<= instance2
 http-address = ${port:instance-debug-http}
 debug-mode = on
 verbose-security = on
