--- a/sources.cfg
+++ b/sources.cfg
@@ -35,6 +35,7 @@ collective.messagesviewlet = git ${remotes:collective}/collective.messagesviewle
 collective.querynextprev = git ${remotes:collective}/collective.querynextprev.git pushurl=${remotes:collective_push}/collective.querynextprev.git
 collective.upgrade = git ${remotes:collective}/collective.upgrade.git pushurl=${remotes:collective_push}/collective.upgrade.git
 collective.solr = git ${remotes:collective}/collective.solr.git branch=master
+collective.big.bang = git ${remotes:collective}/collective.big.bang.git pushurl=${remotes:collective_push}/collective.big.bang.git branch=main
 
 communesplone.layout = git ${remotes:imio}/communesplone.layout.git pushurl=${remotes:imio_push}/communesplone.layout.git
 ftw.labels = git ${remotes:ftw}/ftw.labels.git pushurl=${remotes:ftw_push}/ftw.labels.git
