Improved collective.big.bang managing

--- a/base.cfg
+++ b/base.cfg
@@ -171,6 +171,9 @@ zope-conf-additional =
   ${zope-conf:additional}
   ${zope-conf:amqp}
   ${zope-conf:zamqp}
+environment-vars -=
+    ACTIVE_BIGBANG True
+    ADMIN_PASSWORD ${port:admin-password}
 
 [omelette]
 recipe = collective.recipe.omelette
