--- a/docker-dev.cfg
+++ b/docker-dev.cfg
@@ -2,29 +2,31 @@
 parts +=
     instance
     instance-cron
+parts -=
+    instance2
+    instance3
+    instance4
+    instance1
 
 [zeoserver]
 file-storage = /data/filestorage/Data.fs
 blob-storage = /data/blobstorage
 zeo-address = zeo:8100
 
-[instance1]
+[instance]
+<= instance1
 blob-storage = /data/blobstorage
 shared-blob = on
 zope-conf-additional =
-  <product-config five.z2monitor>
-     bind 0.0.0.0:${port:instance1-monitor}
-  </product-config>
-  ${zope-conf:additional}
-  ${zope-conf:zamqp}
-eggs +=
-    imio.prometheus
-
-zcml +=
-    imio.prometheus
+    <product-config five.z2monitor>
+       bind 0.0.0.0:${port:instance1-monitor}
+    </product-config>
+    ${zope-conf:additional}
+    ${zope-conf:zamqp}
 environment-vars -=
     ACTIVE_BIGBANG True
     ADMIN_PASSWORD ${port:admin-password}
+
 ; makes shitty json beware
 ;event-log-custom =
 ;    <syslog>
@@ -39,13 +41,14 @@ environment-vars -=
 ;        level INFO
 ;    </logfile>
 
+[instance-amqp]
+blob-storage = /data/blobstorage
+
 [instance-async]
 debug-mode = off
+blob-storage = /data/blobstorage
 environment-vars =
     ZC_ASYNC_UUID /data/async-uuid.txt
-
-[instance]
-<= instance1
 
 [instance-cron]
 <= instance1
@@ -60,9 +63,3 @@ zope-conf-additional =
       password ${port:admin-password}
   </clock-server>
   ${zope-conf:zamqp}
-eggs +=
-    collective.big.bang
-zcml +=
-    collective.big.bang
-environment-vars +=
-    ACTIVE_BIGBANG True
