--- a/docker/Dockerfile-ubuntu-20.04
+++ b/docker/Dockerfile-ubuntu-20.04
@@ -92,7 +92,7 @@ ENV ZEO_ADDRESS=zeo:8100 \
  OO_PORT=2002 \
  USE_STREAM=False \
  CUSTOM_TMP=/var/tmp \
- ACTIVE_BIGBANG=True \
+ ACTIVE_BIGBANG=False \
  SITE_ID=standard
 
 EXPOSE 8081
