--- a/prod.cfg
+++ b/prod.cfg
@@ -22,6 +22,7 @@ zope-conf-additional =
   ${zope-conf:zamqp}
 environment-vars -=
     ACTIVE_BIGBANG True
+    ADMIN_PASSWORD ${port:admin-password}
 
 [instance3]
 <= instance2
