--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -56,7 +56,7 @@ services:
       - tmp:/tmp
       - vartmp:/var/tmp
     healthcheck:
-      test: "curl -f localhost:8081/$PLONE_PATH/@@ok"
+      test: "curl -f localhost:8081/$$PLONE_PATH/@@ok"
     labels:
       SERVICE_NAME: "instance1"
   instance2:
@@ -83,7 +83,7 @@ services:
       - tmp:/tmp
       - vartmp:/var/tmp
     healthcheck:
-      test: "curl -f localhost:8081/$PLONE_PATH/@@ok"
+      test: "curl -f localhost:8081/$$PLONE_PATH/@@ok"
     labels:
       SERVICE_NAME: "instance2"
   instance3:
@@ -107,7 +107,7 @@ services:
       - HOSTNAME=instance3
       - PLONE_PATH=demo/demo
     healthcheck:
-      test: "curl -f localhost:8081/$PLONE_PATH/@@ok"
+      test: "curl -f localhost:8081/$$PLONE_PATH/@@ok"
     volumes:
       - ../var/:/data
       - tmp:/tmp
@@ -140,7 +140,7 @@ services:
       - tmp:/tmp
       - vartmp:/var/tmp
     healthcheck:
-      test: "curl -f localhost:8087/$PLONE_PATH/@@ok"
+      test: "curl -f localhost:8087/$$PLONE_PATH/@@ok"
     labels:
       SERVICE_NAME: "worker-cron"
     restart:
@@ -163,7 +163,7 @@ services:
       - HOSTNAME=worker-async
       - PLONE_PATH=demo/demo
     healthcheck:
-      test: "curl -f localhost:8089/$PLONE_PATH/@@ok"
+      test: "curl -f localhost:8089/$$PLONE_PATH/@@ok"
     volumes:
       - ../var/:/data
       - tmp:/tmp
@@ -200,7 +200,7 @@ services:
       - MQ_PASSWORD
       - HOSTNAME=worker-amqp
     healthcheck:
-      test: "curl -f localhost:8286/$PLONE_PATH/@@ok"
+      test: "curl -f localhost:8286/$$PLONE_PATH/@@ok"
     volumes:
       - ../var/:/data
       - tmp:/tmp
@@ -209,7 +209,7 @@ services:
       SERVICE_NAME: "worker-cron"
 #    restart:
 #      unless-stopped
-  maintainance:
+  maintenance:
     image: imiobe/iadelib:latest
     entrypoint: bash
     ports:
@@ -227,16 +227,16 @@ services:
       - ADMIN_PASSWORD=tata
       - CLUSTER=iadelib_pm42
       - MOUNTPOINT=demo
-      - HOSTNAME=maintainance
+      - HOSTNAME=maintenance
       - PLONE_PATH=demo/demo
     healthcheck:
-      test: "curl -f localhost:8080/$PLONE_PATH/@@ok"
+      test: "curl -f localhost:8080/$$PLONE_PATH/@@ok"
     volumes:
       - ../var/:/data
       - tmp:/tmp
       - vartmp:/var/tmp
     labels:
-      SERVICE_NAME: "maintainance"
+      SERVICE_NAME: "maintenance"
 volumes:
   tmp:
   vartmp:
