--- a/.github/workflows/docker-hub-publish.yml
+++ b/.github/workflows/docker-hub-publish.yml
@@ -24,6 +24,7 @@ jobs:
           context: .
           file: ./docker/Dockerfile-ubuntu-20.04
           tags: imiobe/iadelib:latest
+          platforms: linux/amd64
           pull: true
           push: true
       - name: Build dev image
@@ -32,5 +33,6 @@ jobs:
           context: .
           file: ./docker/Dockerfile-dev
           tags: imiobe/iadelib:dev
+          platforms: linux/amd64
           pull: true
           push: true
