Fixed instance-debug in docker [skip ci]

--- a/docker-dev.cfg
+++ b/docker-dev.cfg
@@ -63,3 +63,6 @@ zope-conf-additional =
       password ${port:admin-password}
   </clock-server>
   ${zope-conf:zamqp}
+
+[instance-debug]
+blob-storage = /data/blobstorage
