Do no more auto-checkout collective.excelexport and imio.annex for 4.1.x

--- a/dev.cfg
+++ b/dev.cfg
@@ -16,7 +16,7 @@ parts +=
 auto-checkout =
     appy
     imio.actionspanel
-    imio.annex
+#    imio.annex
     imio.dashboard
     imio.helpers
     imio.history
@@ -34,7 +34,7 @@ auto-checkout =
 #    collective.eeafaceted.collectionwidget
 #    collective.eeafaceted.dashboard
 #    collective.eeafaceted.z3ctable
-    collective.excelexport
+#    collective.excelexport
 #    collective.fontawesome
 #    collective.iconifiedcategory
 #    collective.messagesviewlet
