Added json formatted Z2 like log

--- a/base.cfg
+++ b/base.cfg
@@ -3,6 +3,7 @@
 extensions =
     mr.developer
 allow-picked-versions = false
+show-picked-versions = true
 
 parts =
     omelette
@@ -93,6 +94,10 @@ zcml-additional =
     <include package="plone.app.async" file="multi_db_instance.zcml" />
 
 event-log-custom =
+    <logfile>
+        path ${buildout:directory}/var/log/${:_buildout_section_name_}.log
+        level INFO
+    </logfile>
     <syslog>
         address ${port:logs-server}
         facility local3
@@ -100,10 +105,6 @@ event-log-custom =
         dateformat %b %d %H:%M:%S
         level info
     </syslog>
-    <logfile>
-        path ${buildout:directory}/var/log/${:_buildout_section_name_}.log
-        level INFO
-    </logfile>
 
 environment-vars =
   PYTHON_EGG_CACHE ${buildout:directory}/python-eggs
@@ -132,6 +133,7 @@ eggs =
     zc.z3monitor
     imio.prometheus
     collective.big.bang
+    ftw.structlog
 
 zcml =
     Products.PloneMeeting-overrides
@@ -141,6 +143,7 @@ zcml =
     collective.monitor
     imio.prometheus
     collective.big.bang
+    ftw.structlog
 
 [instance-async]
 <= instance1
