--- a/versions.cfg
+++ b/versions.cfg
@@ -3,6 +3,11 @@ zc.buildout = 2.13.3
 setuptools = 44.1.1
 pip = 20.3.4
 
+ftw.structlog = 1.3.1
+# Required by:
+# ftw.structlog
+tzlocal = 2.1
+
 imio.prometheus = 1.0.0
 collective.big.bang = 1.0a3
 
