Separate json logging config file json

--- a/docker/Dockerfile-ubuntu-20.04
+++ b/docker/Dockerfile-ubuntu-20.04
@@ -66,6 +66,7 @@ RUN apt-get update \
   && echo "    $PROFILE" >> buildout.cfg \
   && echo "    amqp.cfg" >> buildout.cfg \
   && echo "    ldap.cfg" >> buildout.cfg \
+  && echo "    logging.cfg" >> buildout.cfg \
   && echo "    docker.cfg" >> buildout.cfg \
   && su -c "virtualenv -p python2 ." -s /bin/sh imio \
   && su -c "bin/pip install 'python-ldap==2.4.15' -r requirements.txt" -s /bin/sh imio \
