Added zeo healthcheck

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -31,6 +31,8 @@ services:
       - internal
     labels:
       SERVICE_NAME: "zeo"
+    healthcheck:
+      test: "/plone/zeo_healthcheck.sh"
 #    restart:
 #      unless-stopped
   instance1:
