--- a/versions.cfg
+++ b/versions.cfg
@@ -13,8 +13,8 @@ Products.MeetingCommunes = 4.2b13
 # Required by:
 # Products.PloneMeeting
 appy = 1.0.9
+archetypes.schematuning = 1.2
 beautifulsoup4 = 4.5.3
-natsort = 6.2.1
 collective.behavior.talcondition = 0.14
 collective.ckeditor = 4.9.1
 collective.compoundcriterion = 0.4
@@ -51,6 +51,7 @@ imio.history = 1.22
 imio.pm.locales = 4.2b14
 imio.prettylink = 1.17
 imio.pyutils = 0.15
+natsort = 6.2.1
 plone.app.versioningbehavior = 1.3.1
 plone.formwidget.masterselect = 1.6
 # plone.formwidget.namedfile = 2.0.6 has a display bug when editing existing file
