In prod-test.cfg, include package plonemeeting.restapi so it's tests may also be executed

--- a/prod-test.cfg
+++ b/prod-test.cfg
@@ -14,4 +14,5 @@ defaults = ['--auto-color', '--auto-progress', '-s', 'Products.MeetingCommunes',
 eggs =
     ${test:eggs}
     Products.MeetingCommunes [test]
+    plonemeeting.restapi [test]
 environment = testenv
