--- a/solr.cfg
+++ b/solr.cfg
@@ -11,7 +11,8 @@ parts +=
     solr
 
 auto-checkout +=
-#    collective.solr
+  collective.solr
+  collective.indexing
 
 [zope-conf]
 solr-eggs =
@@ -20,16 +21,8 @@ solr-eggs =
 
 
 [versions]
-collective.solr = 8.0.0a12
 kitconcept.recipe.solr = 1.0.0a5
-
-# Required by:
-# collective.solr==8.0.0a5
-collective.indexing = 2.1
 collective.js.showmore = 1.0a4
-
-# Required by:
-# kitconcept.recipe.solr==1.0.0a5
 hexagonit.recipe.download = 1.7.1
 
 
@@ -50,10 +43,14 @@ output = ${core-prop:config}/core.properties
 
 [solr]
 recipe = kitconcept.recipe.solr
-src = http://archive.apache.org/dist/lucene/solr/8.2.0/solr-8.2.0.tgz
+src = http://archive.apache.org/dist/lucene/solr/7.4.0/solr-7.4.0.tgz
 solr-config = ${core-prop:config}
 port = ${port:instance-solr-http}
 java_opts =
     -server
     -Xms${core-prop:min-ram}
     -Xmx${core-prop:max-ram}
+
+[sources]
+collective.solr = git ${remotes:collective}/collective.solr.git pushurl=${remotes:collective_push}/collective.solr.git rev=c99d607cc9af47ca7614ba09016b17483e441ce5
+collective.indexing = git git://github.com/sgeulette/collective.indexing.git pushurl=git@github.com:sgeulette/collective.indexing.git
