--- a/solr.cfg
+++ b/solr.cfg
@@ -8,16 +8,17 @@ parts +=
     solr
 
 auto-checkout +=
-  collective.solr
+;  collective.solr
   collective.indexing
 
 [zope-conf]
 solr-eggs =
     collective.solr
     collective.indexing
-
+solr-version = 7.4.0
 
 [versions]
+collective.solr = 8.0.0
 kitconcept.recipe.solr = 1.0.0a5
 collective.js.showmore = 1.0a4
 hexagonit.recipe.download = 1.7.1
@@ -40,7 +41,7 @@ output = ${core-prop:config}/core.properties
 
 [solr]
 recipe = kitconcept.recipe.solr
-src = http://archive.apache.org/dist/lucene/solr/7.4.0/solr-7.4.0.tgz
+src = http://archive.apache.org/dist/lucene/solr/${zope-conf:solr-version}/solr-${zope-conf:solr-version}.tgz
 solr-config = ${core-prop:config}
 port = ${port:instance-solr-http}
 java_opts =
