fix env var management

--- a/docker-dev.cfg
+++ b/docker-dev.cfg
@@ -37,8 +37,7 @@ environment-vars =
     ZC_ASYNC_UUID /data/async-uuid.txt
 
 [instance-cron]
-<= instance1
-blob-storage = /data/blobstorage
+<= instance
 http-address = 8087
 zope-conf-additional =
   ${zope-conf:additional}
