avoid starting processe in fg because of debug mode

--- a/docker-dev.cfg
+++ b/docker-dev.cfg
@@ -15,6 +15,7 @@ zeo-address = zeo:8100
 
 [instance]
 <= instance1
+debug-mode = off
 blob-storage = /data/blobstorage
 shared-blob = on
 zope-conf-additional =
