--- a/docker/Dockerfile-base
+++ b/docker/Dockerfile-base
@@ -10,6 +10,7 @@ RUN add-apt-repository -yu ppa:libreoffice/libreoffice-still \
   && apt-get full-upgrade -qqy \
   && apt-get install -qqy --no-install-recommends \
      python-is-python2 \
+     lynx \
      openjdk-16-jre-headless \
      libreoffice \
      libreoffice-script-provider-python \
@@ -103,6 +104,7 @@ RUN add-apt-repository -yu ppa:libreoffice/libreoffice-still \
   && apt-get full-upgrade -qqy \
   && apt-get install -qqy --no-install-recommends \
      python-is-python2 \
+     lynx \
      openjdk-16-jre-headless \
      libreoffice \
      libreoffice-script-provider-python \
