--- a/docker/Dockerfile-test
+++ b/docker/Dockerfile-test
@@ -20,7 +20,7 @@ RUN rm -fr bin include lib local share downloads .installed.cfg \
   && echo "    ldap.cfg" >> buildout.cfg \
   && echo "    logging.cfg" >> buildout.cfg \
   && echo "    docker-dev.cfg" >> buildout.cfg \
-  && echo "Bouildout config :" \
+  && echo "Buildout config :" \
   && cat buildout.cfg \
   && virtualenv -p python2 . \
   && bin/pip install -U coverage coveralls "python-ldap==2.4.15" -r requirements.txt \
