--- a/dev.cfg
+++ b/dev.cfg
@@ -41,7 +41,7 @@ auto-checkout =
     collective.eeafaceted.z3ctable
     collective.excelexport
 #    collective.fontawesome
-    collective.iconifiedcategory
+#    collective.iconifiedcategory
     collective.messagesviewlet
     collective.js.fancytree
     collective.js.iframeresizer
