--- a/.github/workflows/docker-hub-publish-base.yml
+++ b/.github/workflows/docker-hub-publish-base.yml
@@ -4,26 +4,15 @@ on:
   schedule:
     - cron: '0 2 * * *' # Daily at 02:00
 jobs:
-  docker:
+  base:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
+      - name: Build and publish to dockerhub
+        uses: IMIO/buildout.pm/actions/dockerhub@master
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-      - name: Build base image
-        uses: docker/build-push-action@v2.5.0
-        with:
-          context: .
-          file: ./docker/Dockerfile-base
-          tags: imiobe/iadelib:base
-          platforms: linux/amd64
-          pull: true
-          push: true
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+          tag: imiobe/iadelib:base
+          dockerfile: ./docker/Dockerfile-base
