--- a/.github/workflows/docker-hub-publish.yml
+++ b/.github/workflows/docker-hub-publish.yml
@@ -9,30 +9,16 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
+      - name: Build latest
+        uses: IMIO/buildout.pm/actions/dockerhub@master
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-      - name: Build image
-        uses: docker/build-push-action@v2.5.0
-        with:
-          context: .
-          file: ./docker/Dockerfile-ubuntu-20.04
-          tags: imiobe/iadelib:latest
-          platforms: linux/amd64
-          pull: true
-          push: true
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+          tag: imiobe/iadelib:latest
       - name: Build dev image
-        uses: docker/build-push-action@v2.5.0
+        uses: IMIO/buildout.pm/actions/dockerhub@master
         with:
-          context: .
-          file: ./docker/Dockerfile-dev
-          tags: imiobe/iadelib:dev
-          platforms: linux/amd64
-          pull: true
-          push: true
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+          tag: imiobe/iadelib:dev
+          dockerfile: ./docker/Dockerfile-dev
