--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,35 +5,26 @@ on:
     tag:
 
 jobs:
-  docker:
+  communes:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
+      - name: Build and publish to dockerhub
+        uses: IMIO/buildout.pm/actions/dockerhub@master
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-      - name: Build image
-        uses: docker/build-push-action@v2.5.0
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+          tag: "imiobe/iadelib:communes-${{ env.GITHUB_REF_NAME }}"
+  hainaut-prov:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Build and publish to dockerhub
+        uses: IMIO/buildout.pm/actions/dockerhub@master
         with:
-          context: .
-          file: ./docker/Dockerfile-ubuntu-20.04
-          tags: "imiobe/iadelib:communes-${{ env.GITHUB_REF_NAME }}"
-          platforms: linux/amd64
-          pull: true
-          push: true
-      - name: Build image
-        uses: docker/build-push-action@v2.5.0
-        with:
-          context: .
-          file: ./docker/Dockerfile-ubuntu-20.04
-          tags: "imiobe/iadelib:hainaut-prov-${{ env.GITHUB_REF_NAME }}"
-          platforms: linux/amd64
-          push: true
-          build-args: PROFILE=hainaut-prov
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+          profile: hainaut-prov
+          tag: "imiobe/iadelib:hainaut-prov-${{ env.GITHUB_REF_NAME }}"
