--- a/versions.cfg
+++ b/versions.cfg
@@ -5,10 +5,10 @@ pip = 20.3.4
 Products.DocFinderTab = 1.0.5
 mr.developer = 2.0.0
 
-Products.PloneMeeting = 4.2b21
+Products.PloneMeeting = 4.2b22
 
 # profile specific versions
-Products.MeetingCommunes = 4.2b14
+Products.MeetingCommunes = 4.2b15
 
 # Required by:
 # Products.PloneMeeting
@@ -17,16 +17,16 @@ archetypes.schematuning = 1.2
 beautifulsoup4 = 4.5.3
 collective.behavior.talcondition = 0.14
 collective.ckeditor = 4.9.1
-collective.compoundcriterion = 0.4
+collective.compoundcriterion = 0.5
 collective.contact.core = 1.36
 collective.contact.plonegroup = 1.38
 collective.contact.widget = 1.12
 collective.dexteritytextindexer = 2.2.1
-collective.documentgenerator = 3.26
-collective.eeafaceted.batchactions = 1.8
-collective.eeafaceted.collectionwidget = 1.11
-collective.eeafaceted.dashboard = 0.17
-collective.eeafaceted.z3ctable = 2.15
+collective.documentgenerator = 3.27
+collective.eeafaceted.batchactions = 1.9
+collective.eeafaceted.collectionwidget = 1.13
+collective.eeafaceted.dashboard = 0.18
+collective.eeafaceted.z3ctable = 2.16
 collective.fingerpointing = 1.8.2
 collective.js.fancytree = 2.20.0.1
 collective.js.iframeresizer = 0.4
@@ -34,7 +34,6 @@ collective.js.tablednd = 0.1
 collective.iconifieddocumentactions = 1.3.2
 collective.messagesviewlet = 0.23
 collective.usernamelogger = 1.4
-collective.z3cform.datagridfield = 1.3.3
 collective.z3cform.select2 = 2.0.1
 communesplone.layout = 4.3.15.1
 cssselect = 1.1.0
@@ -42,15 +41,15 @@ dexterity.localrolesfield = 1.2
 dexterity.localroles = 1.4
 ecreall.helpers.upgrade = 1.4
 ftw.labels = 2.0.1
-imio.annex = 2.10
+imio.annex = 2.11
 imio.actionspanel = 1.57
 imio.dashboard = 2.8
-imio.helpers = 0.50
+imio.helpers = 0.51
 imio.migrator = 1.29
-imio.history = 1.22
-imio.pm.locales = 4.2b15
+imio.history = 1.23
+imio.pm.locales = 4.2b17
 imio.prettylink = 1.17
-imio.pyutils = 0.15
+imio.pyutils = 0.16
 natsort = 6.2.1
 plone.app.versioningbehavior = 1.3.1
 plone.formwidget.masterselect = 1.6
@@ -69,12 +68,10 @@ six = 1.14.0
 #Required by:
 #imio.annex
 collective.dms.scanbehavior = 1.1
-collective.elephantvocabulary = 0.2.5
 collective.fontawesome = 1.1
-collective.iconifiedcategory = 0.49
-collective.js.tooltipster = 1.4
+collective.iconifiedcategory = 0.50
+collective.js.tooltipster = 1.5
 icalendar = 3.11
-Products.DateRecurringIndex = 2.1
 z3c.jbot = 0.7.2
 z3c.json = 0.5.5
 
@@ -200,7 +197,6 @@ plone.app.async = 1.6
 zc.z3monitor = 0.8.0
 zc.monitor = 0.3.1
 zc.async = 1.5.4
-mock = 1.0.1
 zc.ngi = 2.0.1
 zope.bforest = 1.2
 Twisted = 10.2.0
@@ -228,24 +224,19 @@ gocept.munin = 0.1
 collective.prometheus = 1.6.0
 
 # AMQP
-requests = 2.18.4
 imio.dataexchange.core = 0.2
 collective.zamqp = 0.16.1
 imio.zamqp.core = 0.6
-imio.zamqp.pm = 0.12
+imio.zamqp.pm = 0.13
 reportlab = 3.4.0
 PyPDF2 = 1.26.0
 
 # Required by collective.zamqp 0.16.0
-urllib3 = 1.22
-idna = 2.6
-chardet = 3.0.4
-
 functools32 = 3.2.3.post2
 
 # plonemeeting.restapi
-imio.restapi = 1.0a15
-plonemeeting.restapi = 1.0rc4
+imio.restapi = 1.0b1
+plonemeeting.restapi = 1.0rc5
 
 plone.restapi = 7.5.0
 PyJWT = 1.7.1
@@ -257,6 +248,5 @@ importlib-metadata = 1.6.1
 attrs = 19.3.0
 zipp = 1.0.0
 pathlib2 = 2.3.5
-contextlib2 = 0.6.0.post1
 more-itertools = 5.0.0
 scandir = 1.10.0
