Remove PLONE_EXTENSION_IDS where it's not necessary

--- a/docker-dev.cfg
+++ b/docker-dev.cfg
@@ -27,6 +27,7 @@ zope-conf-additional =
 environment-vars -=
     ACTIVE_BIGBANG True
     ADMIN_PASSWORD ${port:admin-password}
+    PLONE_EXTENSION_IDS Products.CMFPlone:plone-content
 
 [instance-amqp]
 blob-storage = /data/blobstorage
