--- a/base.cfg
+++ b/base.cfg
@@ -175,6 +175,7 @@ zope-conf-additional =
 environment-vars -=
     ACTIVE_BIGBANG True
     ADMIN_PASSWORD ${port:admin-password}
+    PLONE_EXTENSION_IDS Products.CMFPlone:plone-content
 
 [omelette]
 recipe = collective.recipe.omelette
