--- a/prod.cfg
+++ b/prod.cfg
@@ -23,6 +23,7 @@ zope-conf-additional =
 environment-vars -=
     ACTIVE_BIGBANG True
     ADMIN_PASSWORD ${port:admin-password}
+    PLONE_EXTENSION_IDS Products.CMFPlone:plone-content
 
 [instance3]
 <= instance2
