Added sample RETURN_FULLOBJECT_AFTER_CREATION_DEFAULT False

--- a/dev.cfg
+++ b/dev.cfg
@@ -75,6 +75,7 @@ environment-vars +=
     ENV dev
     CUSTOM_TMP /tmp/appy
 #    PROFILE_PUBLISHER 1
+#    RETURN_FULLOBJECT_AFTER_CREATION_DEFAULT False
 
 zope-conf-additional +=
 #    publisher-profile-file ${buildout:directory}/profile.dat
