Do not more use git://github.com protocol to get github sources

--- a/sources.cfg
+++ b/sources.cfg
@@ -1,13 +1,13 @@
 [remotes]
-collective = git://github.com/collective
+collective = https://github.com/collective
 collective_push = git@github.com:collective
-plone = git://github.com/plone
+plone = https://github.com/plone
 plone_push = git@github.com:plone
-ftw = git://github.com/4teamwork
+ftw = https://github.com/4teamwork
 ftw_push = git@github.com:4teamwork
-imio = git://github.com/IMIO
+imio = https://github.com/IMIO
 imio_push = git@github.com:IMIO
-zopefoundation = git://github.com/zopefoundation
+zopefoundation = https://github.com/zopefoundation
 zopefoundation_push = git@github.com:zopefoundation
 zopesvn = svn://svn.zope.org/repos/main/
 
@@ -52,7 +52,7 @@ imio.pyutils = git ${remotes:imio}/imio.pyutils.git pushurl=${remotes:imio_push}
 imio.zamqp.core = git ${remotes:imio}/imio.zamqp.core.git pushurl=${remotes:imio_push}/imio.zamqp.core.git
 imio.zamqp.pm = git ${remotes:imio}/imio.zamqp.pm.git pushurl=${remotes:imio_push}/imio.zamqp.pm.git
 
-Products.CPUtils = git ${remotes:imio}/Products.CPUtils.git pushurl=${remotes:imio_push}/Products.CPUtils.git
+Products.CPUtils = git ${remotes:imio_push}/Products.CPUtils.git pushurl=${remotes:imio_push}/Products.CPUtils.git
 # used to test branches on Jenkins, leave branch=master by default
 Products.PloneMeeting = git ${remotes:imio}/Products.PloneMeeting.git pushurl=${remotes:imio_push}/Products.PloneMeeting.git branch=master
 # profiles specific package
