Fixed Products.CPUtils source definition

--- a/sources.cfg
+++ b/sources.cfg
@@ -52,7 +52,7 @@ imio.pyutils = git ${remotes:imio}/imio.pyutils.git pushurl=${remotes:imio_push}
 imio.zamqp.core = git ${remotes:imio}/imio.zamqp.core.git pushurl=${remotes:imio_push}/imio.zamqp.core.git
 imio.zamqp.pm = git ${remotes:imio}/imio.zamqp.pm.git pushurl=${remotes:imio_push}/imio.zamqp.pm.git
 
-Products.CPUtils = git ${remotes:imio_push}/Products.CPUtils.git pushurl=${remotes:imio_push}/Products.CPUtils.git
+Products.CPUtils = git ${remotes:imio}/Products.CPUtils.git pushurl=${remotes:imio_push}/Products.CPUtils.git
 # used to test branches on Jenkins, leave branch=master by default
 Products.PloneMeeting = git ${remotes:imio}/Products.PloneMeeting.git pushurl=${remotes:imio_push}/Products.PloneMeeting.git branch=master
 # profiles specific package
