--- a/base.cfg
+++ b/base.cfg
@@ -112,10 +112,10 @@ environment-vars =
   OO_PORT ${port:oo-port}
   PYTHON_UNO ${port:python-uno}
   PUBLIC_URL ${port:public-url}
-  PLONE_EXTENSION_IDS Products.CMFPlone:plone-content
+  PLONE_EXTENSION_IDS plonetheme.classic:default, plonetheme.sunburst:default, Products.MeetingCommunes:zcity
   DEFAULT_LANGUAGE fr
   ACTIVE_BIGBANG True
-  SITE_ID standard
+  SITE_ID delib
   ADMIN_PASSWORD ${port:admin-password}
 #  CUSTOM_TMP /var/tmp
 #  FTW_LABELS_PERSONAL_LABELS ['lu']
