updated collective.big.bang to 1.0b1

--- a/base.cfg
+++ b/base.cfg
@@ -112,7 +112,7 @@ environment-vars =
   OO_PORT ${port:oo-port}
   PYTHON_UNO ${port:python-uno}
   PUBLIC_URL ${port:public-url}
-  PLONE_EXTENSION_IDS plonetheme.classic:default, plonetheme.sunburst:default, Products.MeetingCommunes:zcity
+  PLONE_EXTENSION_IDS Products.MeetingCommunes:zcity
   DEFAULT_LANGUAGE fr
   ACTIVE_BIGBANG True
   SITE_ID delib
