--- a/.github/workflows/docker-hub-publish-base.yml
+++ b/.github/workflows/docker-hub-publish-base.yml
@@ -14,5 +14,5 @@ jobs:
         with:
           DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
           DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
-          tag: imiobe/iadelib:base
+          tags: imiobe/iadelib:base
           dockerfile: ./docker/Dockerfile-base
