--- a/.github/workflows/docker-hub-publish.yml
+++ b/.github/workflows/docker-hub-publish.yml
@@ -14,11 +14,11 @@ jobs:
         with:
           DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
           DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
-          tag: imiobe/iadelib:latest
+          tags: imiobe/iadelib:latest
       - name: Build dev image
         uses: IMIO/buildout.pm/actions/dockerhub@master
         with:
           DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
           DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
-          tag: imiobe/iadelib:dev
+          tags: imiobe/iadelib:dev
           dockerfile: ./docker/Dockerfile-dev
