--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,19 @@ jobs:
         with:
           DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
           DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
-          tag: "imiobe/iadelib:communes-${{ env.GITHUB_REF_NAME }}"
+          tags: "imiobe/iadelib:communes-${{ env.GITHUB_REF_NAME }}"
+  demo:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Build and publish to dockerhub
+        uses: IMIO/buildout.pm/actions/dockerhub@master
+        with:
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+          dockerfile: ./docker/Dockerfile-demo
+          tags: "imiobe/iadelib:demo-latest,imiobe/iadelib:demo-${{ env.GITHUB_REF_NAME }}"
   hainaut-prov:
     runs-on: ubuntu-latest
     steps:
@@ -27,4 +39,4 @@ jobs:
           DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
           DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
           profile: hainaut-prov
-          tag: "imiobe/iadelib:hainaut-prov-${{ env.GITHUB_REF_NAME }}"
+          tags: "imiobe/iadelib:hainaut-prov-${{ env.GITHUB_REF_NAME }}"
