--- a/actions/dockerhub/action.yml
+++ b/actions/dockerhub/action.yml
@@ -11,7 +11,7 @@ inputs:
     description: 'Buildout profile'
     required: true
     default: 'communes'
-  tag:
+  tags:
     description: 'Tag name'
     required: false
   dockerfile:
@@ -35,7 +35,7 @@ runs:
       with:
         context: .
         file: ${{ inputs.dockerfile }}
-        tags: ${{ inputs.tag }}
+        tags: ${{ inputs.tags }}
         platforms: linux/amd64
         pull: true
         push: true
